# chip8_emulator

./: CMakeLists.txt  README.md  cpp11.cmake
include/: cpu.hpp  screen.hpp
src/: cpu.cpp  main.cpp  screen.cpp
